--- a/PetSegmentationUNet.ipynb
+++ b/PetSegmentationUNet.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyO7OUiZn+apGxMay7wjcd4R",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -2758,6 +2760,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/shervinnd/Pet_Segmentation_UNet/blob/main/PetSegmentationUNet.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "#**Import Libraries**"
       ],
@@ -2781,7 +2793,7 @@
       "metadata": {
         "id": "h5N3SIboD3Gr"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2899,7 +2911,7 @@
         "id": "1TvgTJW87V9X",
         "outputId": "2045d674-ac99-4792-8734-1f22879669c5"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3148,7 +3160,7 @@
         "id": "LeraGPqh5ZLq",
         "outputId": "b904b71c-e85e-4758-d154-e3483e44e102"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3282,7 +3294,7 @@
         "id": "FVT8rvZ_9qUi",
         "outputId": "054a0e73-79d0-48e7-b6fa-c72f5b58edd3"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3570,7 +3582,7 @@
         "id": "z_aUVn-F-zP3",
         "outputId": "223a6ce7-7974-4db4-add6-a3b56f754795"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3908,7 +3920,7 @@
         "id": "fZWLPwP1_sIY",
         "outputId": "3cb2564f-a095-4f9e-d105-f3adde4954de"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3994,7 +4006,7 @@
         "id": "_oTRfpiuDJPW",
         "outputId": "40d95fe0-19d7-4248-a973-8f52d862f27c"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4038,7 +4050,7 @@
         "id": "i25fW6OgDSZg",
         "outputId": "32c1791e-90b1-4612-c573-6625d9d40c52"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
